--- a/03_io.md
+++ b/03_io.md
@@ -1,5 +1,13 @@
 # Input/Output
 
+**Pages**
+| Previous | Home | Next |
+|---|---|---|
+| [Libraries and the Flask web framework](https://github.com/rysharprules/Rython/blob/master/02_libraries.md) | [Home](https://github.com/rysharprules/Rython) | [Object Oriented Programming](https://github.com/rysharprules/Rython/blob/master/04_oop.md) |
+
+----
+
+**Contents**
 - [Input/Output](#inputoutput)
   - [Basic file operations](#basic-file-operations)
   - [`shutils` and `os`](#shutils-and-os)
